--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
   generate:
     name: Data Update
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -32,11 +32,8 @@ jobs:
         with:
           commit_message: 🙆表示用データセット作成
           ref: ${{ github.head_ref }}
-  merge:
-    name: Auto merge data update pull request
-    runs-on: ubuntu-latest
-    steps:
-      - uses: "pascalgn/automerge-action@v0.12.0"
+      - name: Auto merge data update pull request
+        uses: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          UPDATE_LABELS: "data_update"
+          MERGE_LABELS: "data_update"
